syntax = "proto3";

package gophkeeper.grpc;

option go_package = "github.com/sbilibin2017/gophkeeper/pkg/grpc;grpc";

// Запрос для получения списка UsernamePassword (пустой)
message ListUsernamePasswordRequest {}

// Элемент UsernamePassword в ответе
message UsernamePasswordItem {
  string username = 1;
  string password = 2;
  map<string, string> meta = 3;
}

// Ответ со списком UsernamePassword
message ListUsernamePasswordResponse {
  repeated UsernamePasswordItem items = 1;
  string error = 2; // пустая строка — без ошибок
}

// Запрос для получения списка текстов (пустой)
message ListTextRequest {}

// Элемент текста
message TextItem {
  string content = 1;
  map<string, string> meta = 2;
}

// Ответ со списком текстов
message ListTextResponse {
  repeated TextItem items = 1;
  string error = 2;
}

// Запрос для получения списка бинарных данных (пустой)
message ListBinaryRequest {}

// Элемент бинарных данных
message BinaryItem {
  bytes data = 1;
  map<string, string> meta = 2;
}

// Ответ со списком бинарных данных
message ListBinaryResponse {
  repeated BinaryItem items = 1;
  string error = 2;
}

// Запрос для получения списка банковских карт (пустой)
message ListBankCardRequest {}

// Элемент банковской карты
message BankCardItem {
  string number = 1;
  string owner = 2;
  string expiry = 3;
  string cvv = 4;
  map<string, string> meta = 5;
}

// Ответ со списком банковских карт
message ListBankCardResponse {
  repeated BankCardItem items = 1;
  string error = 2;
}

// Сервис получения списков секретов
service ListService {
  rpc ListUsernamePassword(ListUsernamePasswordRequest) returns (ListUsernamePasswordResponse);
  rpc ListText(ListTextRequest) returns (ListTextResponse);
  rpc ListBinary(ListBinaryRequest) returns (ListBinaryResponse);
  rpc ListBankCard(ListBankCardRequest) returns (ListBankCardResponse);
}
